--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -38,8 +38,11 @@
         <li><a href="{{ author.researchgate }}"><i class="fab fa-fw fa-researchgate" aria-hidden="true"></i> ResearchGate</a></li>
       {% endif %}
       {% if author.csdn %}
-      <li><a href="{{ author.csdn }}"><i class="fas fa-fw fa-key" aria-hidden="true"></i> CSDN</a></li>
+      <li><a href="{{ author.csdn }}"><i class="fab fa-fw fa-contao" aria-hidden="true"></i> CSDN</a></li>
       {% endif %}
+      {% if author.yuque %}
+      <li><a href="{{ author.yuque }}"><i class="fab fa-fw fa-pagelines" aria-hidden="true"></i> YuQue</a></li>
+    {% endif %}
       {% if author.twitter %}
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
